Fix desktop blog spacing

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -724,7 +724,8 @@ footer .mtn{
     }
 
 .blog__post-container{
-    padding: 6em 0 4em 0;
+    padding: 0em 0 4em;
+    margin-top: 0;
 }
    
 
